# WS_ComputerGraphik

A04/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  copytext.txt  math.tcc  raytracer  raytracer.cc
A1_math/: Makefile
A2_geometry/: CMakeLists.txt  cmake_install.cmake  geometry.tcc  geometry_test  math_test.cc
A3_asteroids/: CMakeLists.txt  CTestTestfile.cmake  Makefile  math.h  timer.cc
A4_raytracer/: Makefile  raytracer  raytracer.cc
A5_matrix/: math_test.cc
A6_asteroids_opengl/: CTestTestfile.cmake  Makefile  geometry_test  math.cc  math_test  matrix.h  matrix_test  opengl_renderer.cc  physics_test
A6_asteroids_opengl/viewer/: CMakeLists.txt
A7/: CMakeCache.txt  Makefile  Untitled.mtl  cmake_install.cmake  viewer  wavefront_test  wavefront_test.cc
A7/A6_asteroids_opengl/: CMakeCache.txt  cmake_install.cmake  game_test  main_game  main_game.cc  math.tcc  matrix.tcc  physics.tcc  ufo.mtl  wavefront.cc
A7/A7_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry_test  main_game  math_test  matrix.cc  matrix.h  matrix_test  opengl_renderer.cc  opengl_renderer.h  physics_test
A7/A7_test/viewer/: viewer.cc
A7/viewer/: CMakeCache.txt  Makefile  asteroid.mtl  cmake_install.cmake  viewer  viewer.cc  wavefront_test
A7_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  docs.md  docs_opengl_3d.md  main_game  math.h  matrix.h  matrix.tcc  opengl_renderer.cc  opengl_renderer.h  sdl2_renderer.cc  torpedo.mtl  wavefront.h
asteroids/: CMakeCache.txt  cmake_install.cmake  game_test  geometry_test  geometry_test.cc  main_game  math_test  physics.tcc  physics_test  sdl2_renderer.cc
geometry/: CMakeCache.txt  Makefile
math/: CMakeCache.txt  math_test
matrix/: matrix.h  matrix_test.cc
viewer/: wavefront.cc
